--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,17 @@
 # main links links
 main:
   
-  - title: "Home"
-    url: /home/
-  
   - title: "Publications"
     url: /publications/
+    
+  - title: "Services"
+    url: /services/
+  
+  - title: "Awards"
+    url: /awards/
+  
+  - title: "Teaching"
+    url: /teaching/
 
   - title: "Contact"
     url: /contact/
