--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Peixia Li"
-  avatar           : "profile.png"
+  avatar           : "peixia.jpg"
   bio              : "PHD in the University of Sydney"
   location         : "Sydney, Australia"
   employer         :
